@@ -11,6 +11,10 @@
 		 (<i>Adam Franco</i>)
 		
 		<li/> Bug Fix:
+	 
+			When adding slots to a group, they now disapear from the site listing.
+		 (<i>Adam Franco</i>)
+		<li/> Bug Fix:
 	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1036562&amp;group_id=82171&amp;atid=565234">
         			#1036562</a> 
 			CopySite now copies all media, not just those referenced by stories.
