@@ -8,6 +8,9 @@
 			to make several changes to Segue's database and file-storage structure.
 		</important>
 		
+		<fix author='adam'>
+			When adding slots to a group, they now disapear from the site listing.
+		</fix>
 		<fix author='adam' ref='1036562' reftype='bug'>
 			CopySite now copies all media, not just those referenced by stories.
 		</fix>
