@@ -9,6 +9,8 @@ v. 1.3.0 (the future)
 	**** IMPORTANT *** Change: Various changes in Segue necessitate that you upgrade to a new config file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates' to make several changes to Segue's database and file-storage structure. (Adam Franco)
 		
 		
+	* Bug Fix: When adding slots to a group, they now disapear from the site listing. (Adam Franco)
+		
 	* Bug Fix: #1036562 CopySite now copies all media, not just those referenced by stories. (Adam Franco)
 		
 	* New feature: Added a configuration checking function and some more helpful error messages so that installing and configuring Segue is more straight forward. (Adam Franco)
